同步Footer & Cursor & 更新HScroll

--- a/_guideline.html
+++ b/_guideline.html
@@ -256,41 +256,40 @@
       <img src="./assets/class_01.png" alt="">
       <h6>手捏器皿</h6>
     </div>
-
-
   </div>
 
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div class="container-footer">
-      <!-- sitemap -->
-      <div class="sitemap">
-        <a href="arts.html">藝術陶</a>
-        <a href="works.html">生活陶</a>
-        <a href="class.html">課程教學</a>
-        <a href="contact.html">聯絡我們</a>
-      </div>
-      <!-- info -->
-      <div class="info-box">
-        <a class="label" href="">950<br>台東縣台東市杭州街118號1樓</a>
-        <a class="roboto" href="">(+886) 921-271-867</a>
-        <a class="roboto" href="">yoshipottery@gmail.com</a>
-      </div>
-      <!-- brand -->
-      <div class="brandbox dark-color">
-        <div class="follow-box">
-          <a href="https://www.instagram.com/yoshipottery/" target=_blank class="ig"><img src="./assets/instagram.svg"
-              alt=""></a>
-          <span class="label">/</span>
-          <a ref="https://www.facebook.com/yoshipottery" target=_blank class="fb"><img src="./assets/facebook.svg"
-              alt=""></a>
-        </div>
-        <h4>yoshi pottery</h4>
-        <p>生活器皿販售 / 陶藝課程教學</p>
-      </div>
+ <!-- ========== FOOTER ========== -->
+ <footer class="footer">
+  <div class="container-footer">
+    <!-- sitemap -->
+    <div class="sitemap">
+      <a href="arts.html">藝術陶</a>
+      <a href="works.html">生活陶</a>
+      <a href="class.html">課程教學</a>
+      <a href="contact.html">聯絡我們</a>
     </div>
-  </footer>
-  <!-- FOOTER -->
+    <!-- info -->
+    <div class="info-box">
+      <div class="label">950<br>台東縣台東市杭州街118號1樓</div>
+      <div class="roboto">(+886) 921-271-867</div>
+      <div class="roboto">yoshipottery@gmail.com</div>
+    </div>
+    <!-- brand -->
+    <div class="brandbox dark-color">
+      <div class="follow-box">
+        <a href="https://www.instagram.com/yoshipottery/" target=_blank class="ig"><img src="./assets/instagram.svg"
+            alt=""></a>
+        <span class="label">/</span>
+        <a ref="https://www.facebook.com/yoshipottery" target=_blank class="fb"><img src="./assets/facebook.svg"
+            alt=""></a>
+      </div>
+      <h4>yoshi pottery</h4>
+      <p>生活器皿販售 / 陶藝課程教學</p>
+    </div>
+  </div>
+  <div class="copyright-footer">本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品</div>
+</footer>
+<!-- ========== FOOTER ========== -->
 </body>
 
 </html>
