--- a/backup/classes.html
+++ b/backup/classes.html
@@ -58,11 +58,10 @@
   <!-- =========== NAVBR =========== -->
   <!-- CONTAINER -->
   <main>
-    <!-- =========== BANNER =========== -->
     <div class="left-fixed">
       <p class="copyright roboto">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
     </div>
-    <section class="classBanner">
+    <section>
       <div class="container">
         <div class="class-hero">
           <div class="class-txt">
@@ -76,57 +75,50 @@
         </div>
       </div>
     </section>
-    <!-- =========== BANNER =========== -->
-    <!-- =========== HR-SCROLL =========== -->
-    <div class="hrWrapper">
-      <div class="classContainer">
+    <section class="class-list">
+      <div class="titlebox">
+        <h1>課程教學</h1>
         <h2>CLASSES</h2>
-        <div class="classContainerSm">
-          <div class="classItem">
-            <div class="classCard">
+      </div>
+      <section class="track">
+        <div class="camera">
+          <div class="frame">
+            <a href="./class-temp.html" class="item">
               <p>學習以土球、土條、土板三大類基礎做陶技法，<br>
                 製作日常中會使用到的物品。</p>
               <img src="./assets/class_01.png" alt="">
               <h5>手捏器皿</h5>
-            </div>
-          </div>
-          <div href="" class="classItem">
-            <div class="classCard">
+            </a>
+            <a href="" class="item">
               <p>學習從掌上型小陶偶，
                 到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
               <img src="./assets/class_02.png" alt="">
               <h5>陶偶雕塑</h5>
-            </div>
-          </div>
-          <div href="" class="classItem">
-            <div class="classCard">
+            </a>
+            <a href="" class="item">
               <p>學習以轆轤製作杯、碗、盤形，技巧較高，表面質感較為圓滑平整。</p>
               <img src="./assets/class_03.png" alt="">
               <h5>基礎拉胚</h5>
-            </div>
-          </div>
-          <div href="" class="classItem">
-            <div class="classCard">
+            </a>
+            <a href="" class="item">
               <p>學習從掌上型小陶偶，
                 到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
               <img src="./assets/class_04.png" alt="">
               <h5>進階創作</h5>
-            </div>
-          </div>
-          <div href="" class="classItem">
-            <div class="classCard">
+            </a>
+            <a href="" class="item">
               <p>學習從掌上型小陶偶，
                 到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
               <img src="./assets/class_05代換.png" alt="">
               <h5>體驗 / 團體課</h5>
-            </div>
+            </a>
           </div>
         </div>
-      </div>
-    </div>
+      </section>
+    </section>
   </main>
   <!-- CONTAINER -->
-  <!--  ========== FOOTER ========== -->
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="container-footer">
       <!-- sitemap -->
@@ -137,35 +129,28 @@
         <a href="contact.html">聯絡我們</a>
       </div>
       <!-- info -->
-      <div class="ft-infobox">
-        <div class="label">950<br />台東縣台東市杭州街118號1樓</div>
-        <div class="roboto">(+886) 921-271-867</div>
-        <div class="roboto">yoshipottery@gmail.com</div>
+      <div class="info-box">
+        <a class="label" href="">950<br>台東縣台東市杭州街118號1樓</a>
+        <a class="roboto" href="">(+886) 921-271-867</a>
+        <a class="roboto" href="">yoshipottery@gmail.com</a>
       </div>
       <!-- brand -->
       <div class="brandbox dark-color">
-        <div class="ft-follow-box">
-          <a href="https://www.instagram.com/yoshipottery/" target="_blank" class="ig"><img src="./assets/instagram.svg"
-              alt="" /></a>
+        <div class="follow-box">
+          <a href="https://www.instagram.com/yoshipottery/" target=_blank class="ig"><img src="./assets/instagram.svg"
+              alt=""></a>
           <span class="label">/</span>
-          <a ref="https://www.facebook.com/yoshipottery" target="_blank" class="fb"><img src="./assets/facebook.svg"
-              alt="" /></a>
+          <a ref="https://www.facebook.com/yoshipottery" target=_blank class="fb"><img src="./assets/facebook.svg"
+              alt=""></a>
         </div>
-        <h4>
-          yoshi pottery
-          <div class="ft-ball"></div>
-        </h4>
+        <h4>yoshi pottery</h4>
         <p>生活器皿販售 / 陶藝課程教學</p>
       </div>
     </div>
-    <div class="copyright-footer">
-      本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品。
-    </div>
+    <span class="copyright-footer">本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品，本平台僅供學習、展示之用。 參考網站:</span>
+    <a class="roboto caption" href="http://www.sakuzan.co.jp/product/urban.html">SAKUZAN URBAN</a>
   </footer>
-  <!--  ========== FOOTER ========== -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
-  <script src="./js/HScroll-GSAP.js"></script>
+  <!-- FOOTER -->
   <script src="./js/cursor.js"></script>
   <script src="./js/hr-scroll.js"></script>
 </body>
