--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,15 @@
 <html lang="zh-Hant-TW">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;400&family=Roboto:wght@300&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="./css/main.css">
+    rel="stylesheet" />
+  <link rel="stylesheet" href="./css/main.css" />
   <title>聯絡我們｜又煦陶作</title>
 </head>
 
@@ -18,8 +18,7 @@
   <!-- =========== Cursor =========== -->
   <div class="cursor-wrap">
     <div class="cursor"></div>
-    <div class="ball" id="ball">
-    </div>
+    <div class="ball" id="ball"></div>
   </div>
   <!-- =========== Cursor =========== -->
   <!-- =========== NAVBR =========== -->
@@ -27,12 +26,13 @@
     <nav class="navbar">
       <div class="container-navbar">
         <!-- brand -->
-        <a class="navbar-brand" href="index.html"><img src="./assets/logo1.svg" alt=""></a>
+        <a class="navbar-brand" href="index.html"><img src="./assets/logo1.svg" alt="" /></a>
         <!-- Navlink-list -->
         <div class="navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="navlink" href="arts.html">藝術陶<div class="underline"></div></a>
+              <a class="navlink" href="arts.html">藝術陶
+                <div class="underline"></div></a>
             </li>
             <li class="nav-item">
               <a class="navlink" href="works.html">生活陶
@@ -40,10 +40,12 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="classes.html">課程教學<div class="underline"></div></a>
+              <a class="navlink" href="classes.html">課程教學
+                <div class="underline"></div></a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="contact.html">聯絡我們<div class="underline"></div></a>
+              <a class="navlink" href="contact.html">聯絡我們
+                <div class="underline"></div></a>
             </li>
           </ul>
         </div>
@@ -69,34 +71,36 @@
             <h1 class="align-left">聯絡我們</h1>
             <p>工作室採預約制，如預參觀請來電洽詢。</p>
             <div class="info-box">
-              <a href="" class="noto-sans">950<br>台東縣台東市杭州街118號1樓</a>
+              <a href="" class="noto-sans">950<br />台東縣台東市杭州街118號1樓</a>
               <a href="" class="roboto">(+886) 921-271-867</a>
               <a href="" class="roboto">yoshipottery@gmail.com</a>
               <div class="follow-box">
                 <span class="roboto">follow us</span>
-                <a href="https://www.instagram.com/yoshipottery/" target=_blank class="ig"><img
-                    src="./assets/instagram.svg" alt=""></a>
+                <a href="https://www.instagram.com/yoshipottery/" target="_blank" class="ig"><img
+                    src="./assets/instagram.svg" alt="" /></a>
                 <span class="label">/</span>
-                <a href="https://www.facebook.com/yoshipottery" target=_blank class="fb"><img
-                    src="./assets/facebook.svg" alt=""></a>
+                <a href="https://www.facebook.com/yoshipottery" target="_blank" class="fb"><img
+                    src="./assets/facebook.svg" alt="" /></a>
               </div>
             </div>
           </div>
         </div>
         <div class="contact-r">
-          <h5 class="contact-txt dark-color">提供多種內容陶藝課程、陶製品商業與客製化服務，<br>
-            歡迎填寫下列表單與我聯繫。</h5>
+          <h5 class="contact-txt dark-color">
+            提供多種內容陶藝課程、陶製品商業與客製化服務，<br />
+            歡迎填寫下列表單與我聯繫。
+          </h5>
           <div class="form">
             <div class="form-row">
               <div class="form-column">
                 <div class="input-string">
-                  <input class="input" type="text">
+                  <input class="input" type="text" />
                   <label aria-label="Name" class="input-label">姓 名</label>
                 </div>
               </div>
               <div class="form-column">
                 <div class="input-string">
-                  <input class="input" type="text">
+                  <input class="input" type="text" />
                   <label aria-label="Name" class="input-label">聯絡電話</label>
                 </div>
               </div>
@@ -104,17 +108,18 @@
             <div class="form-row">
               <div class="form-column">
                 <div class="input-string">
-                  <input class="input" type="text">
+                  <input class="input" type="text" />
                   <label aria-label="Name" class="input-label">EMAIL</label>
                 </div>
               </div>
               <div class="form-column">
                 <div class="input-string">
-                  <select class="input" type="select">
+                  <select class="select" type="select">
                     <option value="其他">其他</option>
                     <option value="陶器客製化">陶器客製化</option>
                     <option value="陶器商業訂製">陶器商業訂製</option>
-                    <option value="課程報名" selected>課程報名</option>
+                    <option value="陶器商業訂製">課程報名</option>
+                    <option value="課程報名" selected>請選擇</option>
                   </select>
                 </div>
               </div>
@@ -130,18 +135,14 @@
             </div>
 
             <button type="submit" class="submit-btn">確認送出</button>
-
           </div>
         </div>
       </div>
     </section>
-
-
-
   </main>
   <!-- CONTAINER -->
 
-  <!-- FOOTER -->
+  <!--  ========== FOOTER ========== -->
   <footer class="footer">
     <div class="container-footer">
       <!-- sitemap -->
@@ -152,43 +153,34 @@
         <a href="contact.html">聯絡我們</a>
       </div>
       <!-- info -->
-      <div class="info-box">
-        <a class="label" href="">950<br>台東縣台東市杭州街118號1樓</a>
-        <a class="roboto" href="">(+886) 921-271-867</a>
-        <a class="roboto" href="">yoshipottery@gmail.com</a>
+      <div class="ft-infobox">
+        <div class="label">950<br />台東縣台東市杭州街118號1樓</div>
+        <div class="roboto">(+886) 921-271-867</div>
+        <div class="roboto">yoshipottery@gmail.com</div>
       </div>
       <!-- brand -->
       <div class="brandbox dark-color">
-        <div class="follow-box">
-          <a href="https://www.instagram.com/yoshipottery/" target=_blank class="ig"><img src="./assets/instagram.svg"
-              alt=""></a>
+        <div class="ft-follow-box">
+          <a href="https://www.instagram.com/yoshipottery/" target="_blank" class="ig"><img src="./assets/instagram.svg"
+              alt="" /></a>
           <span class="label">/</span>
-          <a ref="https://www.facebook.com/yoshipottery" target=_blank class="fb"><img src="./assets/facebook.svg"
-              alt=""></a>
+          <a ref="https://www.facebook.com/yoshipottery" target="_blank" class="fb"><img src="./assets/facebook.svg"
+              alt="" /></a>
         </div>
-        <h4>yoshi pottery</h4>
+        <h4>
+          yoshi pottery
+          <div class="ft-ball"></div>
+        </h4>
         <p>生活器皿販售 / 陶藝課程教學</p>
       </div>
     </div>
-    <span class="copyright-footer">本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品，本平台僅供學習、展示之用。 參考網站:</span>
-    <a class="roboto caption" href="http://www.sakuzan.co.jp/product/urban.html">SAKUZAN URBAN</a>
+    <div class="copyright-footer">
+      本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品。
+    </div>
   </footer>
-  <!-- FOOTER -->
-  <script src="./js/main.js"></script>
+  <!--  ========== FOOTER ========== -->
+  <script src="./js/labeltrans.js"></script>
   <script src="./js/cursor.js"></script>
 </body>
 
 </html>
-
-<!-- // const array = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
-// //印出上面的陣列，這個陣列的每個值，如果不被2整除就 執行console.log()
-
-// for (let i = 0; i < array.length; i++) {
-//   const number = array[i];
-//   //console.log(number)
-//   if (number % 2 == 1) {
-//     console.log(array[i])
-//   } else {
-//     console.log('我是偶數')
-//   }
-// } -->
