--- a/index.html
+++ b/index.html
@@ -97,19 +97,23 @@
     </section>
     <!-- about section -->
     <section class="about-section">
-      <div class="about-l w-50 sp--24">
+      <div class="about-l">
         <img src="./assets/about_01.jpg" alt="">
         <div class="titlebox">
           <h1>關於我們</h1>
           <h2>ABOUT</h2>
         </div>
       </div>
-      <div class="about-r w-45">
+      <div class="about-r">
         <p class="w-70">又煦陶作位於台灣台東市，主理者回家郷開設陶藝工作室，提供陶藝教學與器皿製作，希望工藝能走進大家的生活中。</p>
         <p class="w-70">又煦有再度和煦溫暖之意，製作的生活陶器以簡單的線條及釉色為主，一個一個拉胚手作，保留陶器樸質與自然的特性，也延續工藝技法及它的美好。</p>
         <div class="ab-imgbox">
-          <img src="./assets/about_02.png" alt="">
-          <img src="./assets/about_03.png" alt="">
+          <div class="about-img">
+            <img src="./assets/about_02.png" alt="">
+          </div>
+          <div class="about-img">
+            <img src="./assets/about_03.png" alt="">
+          </div>
         </div>
       </div>
     </section>
@@ -157,49 +161,6 @@
       </div>
     </section>
     <!-- arts section -->
-    <!-- class section -->
-    <section class="class-section">
-      <div class="titlebox">
-        <h1>課程教學</h1>
-        <h2>CLASSES</h2>
-      </div>
-      <section class="track">
-        <div class="camera">
-          <div class="frame">
-            <a href="./class-temp.html" class="item">
-              <p>學習以土球、土條、土板三大類基礎做陶技法，<br>
-                製作日常中會使用到的物品。</p>
-              <img src="./assets/class_01.png" alt="">
-              <h5>手捏器皿</h5>
-            </a>
-            <a href="" class="item">
-              <p>學習從掌上型小陶偶，
-                到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
-              <img src="./assets/class_02.png" alt="">
-              <h5>陶偶雕塑</h5>
-            </a>
-            <a href="" class="item">
-              <p>學習以轆轤製作杯、碗、盤形，技巧較高，表面質感較為圓滑平整。</p>
-              <img src="./assets/class_03.png" alt="">
-              <h5>基礎拉胚</h5>
-            </a>
-            <a href="" class="item">
-              <p>學習從掌上型小陶偶，
-                到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
-              <img src="./assets/class_04.png" alt="">
-              <h5>進階創作</h5>
-            </a>
-            <a href="" class="item">
-              <p>學習從掌上型小陶偶，
-                到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
-              <img src="./assets/class_05代換.png" alt="">
-              <h5>體驗 / 團體課</h5>
-            </a>
-          </div>
-        </div>
-      </section>
-    </section>
-    <!-- class section -->
     <!-- contact section -->
     <section class="contact-section">
       <div class="index-contact-wrap wrap-row">
@@ -230,7 +191,7 @@
   </main>
   <!-- CONTAINER -->
 
-  <!-- FOOTER -->
+  <!--  ========== FOOTER ========== -->
   <footer class="footer">
     <div class="container-footer">
       <!-- sitemap -->
@@ -241,30 +202,36 @@
         <a href="contact.html">聯絡我們</a>
       </div>
       <!-- info -->
-      <div class="info-box">
-        <a class="label" href="">950<br>台東縣台東市杭州街118號1樓</a>
-        <a class="roboto" href="">(+886) 921-271-867</a>
-        <a class="roboto" href="">yoshipottery@gmail.com</a>
+      <div class="ft-infobox">
+        <div class="label">950<br />台東縣台東市杭州街118號1樓</div>
+        <div class="roboto">(+886) 921-271-867</div>
+        <div class="roboto">yoshipottery@gmail.com</div>
       </div>
       <!-- brand -->
       <div class="brandbox dark-color">
-        <div class="follow-box">
-          <a href="https://www.instagram.com/yoshipottery/" target=_blank class="ig"><img src="./assets/instagram.svg"
-              alt=""></a>
+        <div class="ft-follow-box">
+          <a href="https://www.instagram.com/yoshipottery/" target="_blank" class="ig"><img src="./assets/instagram.svg"
+              alt="" /></a>
           <span class="label">/</span>
-          <a ref="https://www.facebook.com/yoshipottery" target=_blank class="fb"><img src="./assets/facebook.svg"
-              alt=""></a>
+          <a ref="https://www.facebook.com/yoshipottery" target="_blank" class="fb"><img src="./assets/facebook.svg"
+              alt="" /></a>
         </div>
-        <h4>yoshi pottery</h4>
+        <h4>
+          yoshi pottery
+          <div class="ft-ball"></div>
+        </h4>
         <p>生活器皿販售 / 陶藝課程教學</p>
       </div>
     </div>
-    <span class="copyright-footer">本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品。</span>
+    <div class="copyright-footer">
+      本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品。
+    </div>
   </footer>
-  <!-- FOOTER -->
-
+  <!--  ========== FOOTER ========== -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
+  <script src="./js/HScroll-GSAP.js"></script>
   <script src="./js/cursor.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.1.9/dist/js/splide.cjs.min.js"></script> -->
 </body>
 
 </html>
