--- a/works.html
+++ b/works.html
@@ -78,48 +78,80 @@
       </div>
       <!-- works-card -->
       <div class="works-list wrap-row">
-        <a class="works-card w-30" href="./work-temp.html">
-          <img src="./assets/works_01.png" alt="" />
+        <a class="works-card" href="./work-temp.html">
+          <div class="workImgBlock">
+            <img src="./assets/white_01.png" alt="" />
+          </div>
           <div>
             <span class="align-left">作品名稱</span>
-            <span href="" class="tag caption btn-secondary">18cm</span>
+            <span href="" class="tag caption btn-secondary">250ml</span>
+          </div>
+          <p class="price-text">NT$600</p>
+        </a>
+        <a class="works-card w-30">
+          <div class="workImgBlock">
+            <img src="./assets/white_02.png" alt="" />
+          </div>
+          <div>
+            <span class="align-left">作品名稱</span>
+            <span href="" class="tag caption btn-secondary">250ml</span>
           </div>
           <p class="price-text">NT$500</p>
         </a>
         <a class="works-card w-30">
-          <img src="./assets/works_02.png" alt="" />
+          <div class="workImgBlock">
+            <img src="./assets/white_03.png" alt="" />
+          </div>
           <div>
             <span class="align-left">作品名稱</span>
-            <span href="" class="tag caption btn-secondary">18cm</span>
+            <span href="" class="tag caption btn-secondary">250ml</span>
           </div>
           <p class="price-text">NT$500</p>
         </a>
         <a class="works-card w-30">
-          <img src="./assets/works_03.png" alt="" />
+          <div class="workImgBlock">
+            <img src="./assets/white_04.png" alt="" />
+          </div>
           <div>
             <span class="align-left">作品名稱</span>
-            <span href="" class="tag caption btn-secondary">18cm</span>
+            <span href="" class="tag caption btn-secondary">250ml</span>
           </div>
           <p class="price-text">NT$500</p>
         </a>
         <a class="works-card w-30">
-          <img src="./assets/works_01.png" alt="" />
+          <div class="workImgBlock">
+            <img src="./assets/white_05.png" alt="" />
+          </div>
           <div>
             <span class="align-left">作品名稱</span>
-            <span href="" class="tag caption btn-secondary">18cm</span>
+            <span href="" class="tag caption btn-secondary">250ml</span>
           </div>
           <p class="price-text">NT$500</p>
         </a>
         <a class="works-card w-30">
-          <img src="./assets/works_02.png" alt="" />
+          <div class="workImgBlock">
+            <img src="./assets/white_06.png" alt="" />
+          </div>
           <div>
             <span class="align-left">作品名稱</span>
-            <span href="" class="tag caption btn-secondary">18cm</span>
+            <span href="" class="tag caption btn-secondary">250ml</span>
           </div>
           <p class="price-text">NT$500</p>
         </a>
         <a class="works-card w-30">
-          <img src="./assets/works_03.png" alt="" />
+          <div class="workImgBlock">
+            <img src="./assets/white_07.png" alt="" />
+          </div>
+          <div>
+            <span class="align-left">作品名稱</span>
+            <span href="" class="tag caption btn-secondary">250ml</span>
+          </div>
+          <p class="price-text">NT$500</p>
+        </a>
+        <a class="works-card w-30">
+          <div class="workImgBlock">
+            <img src="./assets/white_08.png" alt="" />
+          </div>
           <div>
             <span class="align-left">作品名稱</span>
             <span href="" class="tag caption btn-secondary">18cm</span>
@@ -145,7 +177,7 @@
   </main>
   <!-- CONTAINER -->
 
-  <!-- FOOTER -->
+  <!--  ========== FOOTER ========== -->
   <footer class="footer">
     <div class="container-footer">
       <!-- sitemap -->
@@ -156,30 +188,32 @@
         <a href="contact.html">聯絡我們</a>
       </div>
       <!-- info -->
-      <div class="info-box">
-        <a class="label" href="">950<br />台東縣台東市杭州街118號1樓</a>
-        <a class="roboto" href="">(+886) 921-271-867</a>
-        <a class="roboto" href="">yoshipottery@gmail.com</a>
+      <div class="ft-infobox">
+        <div class="label">950<br />台東縣台東市杭州街118號1樓</div>
+        <div class="roboto">(+886) 921-271-867</div>
+        <div class="roboto">yoshipottery@gmail.com</div>
       </div>
       <!-- brand -->
       <div class="brandbox dark-color">
-        <div class="follow-box">
+        <div class="ft-follow-box">
           <a href="https://www.instagram.com/yoshipottery/" target="_blank" class="ig"><img src="./assets/instagram.svg"
               alt="" /></a>
           <span class="label">/</span>
           <a ref="https://www.facebook.com/yoshipottery" target="_blank" class="fb"><img src="./assets/facebook.svg"
               alt="" /></a>
         </div>
-        <h4>yoshi pottery</h4>
+        <h4>
+          yoshi pottery
+          <div class="ft-ball"></div>
+        </h4>
         <p>生活器皿販售 / 陶藝課程教學</p>
       </div>
     </div>
-    <span class="copyright-footer">本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品，本平台僅供學習、展示之用。
-      參考網站:</span>
-    <a class="roboto caption" href="http://www.sakuzan.co.jp/product/urban.html">SAKUZAN URBAN</a>
+    <div class="copyright-footer">
+      本網站為緯育TibaMe前端工程師專業技術養成班第72期學員專題作品。
+    </div>
   </footer>
-  <!-- FOOTER -->
-
+  <!--  ========== FOOTER ========== -->
   <script src="./js/cursor.js"></script>
 </body>
 
