--- a/works.html
+++ b/works.html
@@ -78,8 +78,8 @@
       </div>
       <!-- works-card -->
       <div class="works-list wrap-row">
-        <a class="works-card" href="./work-temp.html">
-          <div class="workImgBlock">
+        <a class="works-card" href="">
+          <div class="thumbnail">
             <img src="./assets/white_01.png" alt="" />
           </div>
           <div>
@@ -88,8 +88,8 @@
           </div>
           <p class="price-text">NT$600</p>
         </a>
-        <a class="works-card w-30">
-          <div class="workImgBlock">
+        <a class="works-card" href="./work-temp.html">
+          <div class="thumbnail">
             <img src="./assets/white_02.png" alt="" />
           </div>
           <div>
@@ -98,8 +98,8 @@
           </div>
           <p class="price-text">NT$500</p>
         </a>
-        <a class="works-card w-30">
-          <div class="workImgBlock">
+        <a class="works-card" href="">
+          <div class="thumbnail">
             <img src="./assets/white_03.png" alt="" />
           </div>
           <div>
@@ -108,8 +108,8 @@
           </div>
           <p class="price-text">NT$500</p>
         </a>
-        <a class="works-card w-30">
-          <div class="workImgBlock">
+        <a class="works-card" href="">
+          <div class="thumbnail">
             <img src="./assets/white_04.png" alt="" />
           </div>
           <div>
@@ -118,8 +118,8 @@
           </div>
           <p class="price-text">NT$500</p>
         </a>
-        <a class="works-card w-30">
-          <div class="workImgBlock">
+        <a class="works-card" href="">
+          <div class="thumbnail">
             <img src="./assets/white_05.png" alt="" />
           </div>
           <div>
@@ -128,8 +128,8 @@
           </div>
           <p class="price-text">NT$500</p>
         </a>
-        <a class="works-card w-30">
-          <div class="workImgBlock">
+        <a class="works-card" href="">
+          <div class="thumbnail">
             <img src="./assets/white_06.png" alt="" />
           </div>
           <div>
@@ -138,8 +138,8 @@
           </div>
           <p class="price-text">NT$500</p>
         </a>
-        <a class="works-card w-30">
-          <div class="workImgBlock">
+        <a class="works-card" href="">
+          <div class="thumbnail">
             <img src="./assets/white_07.png" alt="" />
           </div>
           <div>
@@ -148,8 +148,8 @@
           </div>
           <p class="price-text">NT$500</p>
         </a>
-        <a class="works-card w-30">
-          <div class="workImgBlock">
+        <a class="works-card" href="">
+          <div class="thumbnail">
             <img src="./assets/white_08.png" alt="" />
           </div>
           <div>
