--- a/arts.html
+++ b/arts.html
@@ -17,6 +17,7 @@
 <body onload="followMouse();">
   <!-- =========== Cursor =========== -->
   <div class="cursor-wrap">
+    <!-- <h2 class="display-title">Art Pottery</h2> -->
     <div class="cursor"></div>
     <div class="ball" id="ball">
     </div>
@@ -64,37 +65,37 @@
     <h3 class="art-title">藝術陶</h3>
     <!-- arts-card -->
     <div class="art-wrap">
-      <a class="w-30 px-24 arts-card arts-card-1" href="">
+      <a class="arts-card arts-card-1">
         <div class="thumbnail">
           <img src="./assets/arts_01.png" />
         </div>
         <p class="align-center">作品名稱</p>
       </a>
-      <a class="w-40 px-24 arts-card arts-card-2" href="">
+      <a class="arts-card arts-card-2">
         <div class="thumbnail">
           <img src="./assets/arts_02.png" />
         </div>
         <p class="align-center">作品名稱</p>
       </a>
-      <a class="w-30 px-24 arts-card arts-card-3" href="">
+      <a class="arts-card arts-card-3">
         <div class="thumbnail">
           <img src="./assets/arts_03.png" />
         </div>
         <p class="align-center">作品名稱</p>
       </a>
-      <a class="w-30 px-24 arts-card arts-card-4" href="">
+      <a class="arts-card arts-card-4">
         <div class="thumbnail">
           <img src="./assets/arts_04.png" />
         </div>
         <p class="align-center">作品名稱</p>
       </a>
-      <a class="w-40 px-24 arts-card arts-card-5" href="">
+      <a class="arts-card arts-card-5">
         <div class="thumbnail">
           <img src="./assets/arts_05.png" />
         </div>
         <p class="align-center">作品名稱</p>
       </a>
-      <a class="w-30 px-24 arts-card arts-card-6" href="">
+      <a class="arts-card arts-card-6">
         <div class="thumbnail">
           <img src="./assets/arts_06.png" />
         </div>
@@ -141,9 +142,11 @@
     </div>
   </footer>
   <!--  ========== FOOTER ========== -->
-
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script> -->
   <script src="./js/cursor.js"></script>
   <script src="./js/textHScroll.js"></script>
+  <!-- <script src="./js/scroll-GSAP.js"></script> -->
 </body>
 
 </html>
