--- a/classes.html
+++ b/classes.html
@@ -124,6 +124,7 @@
         </div>
       </div>
     </div>
+    <!-- =========== HR-SCROLL =========== -->
   </main>
   <!-- CONTAINER -->
   <!--  ========== FOOTER ========== -->
@@ -163,8 +164,10 @@
     </div>
   </footer>
   <!--  ========== FOOTER ========== -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script> -->
+  <script src="./js/vendor/gsap.js"></script>
+  <script src="./js/vendor/ScrollTrigger.js"></script>
   <script src="./js/HScroll-GSAP.js"></script>
   <script src="./js/cursor.js"></script>
   <script src="./js/hr-scroll.js"></script>
