--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                 <div class="underline"></div></a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="contact.html">聯絡我們
+              <a class="navlink active" href="contact.html">聯絡我們
                 <div class="underline"></div></a>
             </li>
           </ul>
@@ -71,9 +71,9 @@
             <h1 class="align-left">聯絡我們</h1>
             <p>工作室採預約制，如預參觀請來電洽詢。</p>
             <div class="info-box">
-              <a href="" class="noto-sans">950<br />台東縣台東市杭州街118號1樓</a>
-              <a href="" class="roboto">(+886) 921-271-867</a>
-              <a href="" class="roboto">yoshipottery@gmail.com</a>
+              <div href="" class="noto-sans">950<br />台東縣台東市杭州街118號1樓</div>
+              <div href="" class="roboto">(+886) 921-271-867</div>
+              <div href="" class="roboto">yoshipottery@gmail.com</div>
               <div class="follow-box">
                 <span class="roboto">follow us</span>
                 <a href="https://www.instagram.com/yoshipottery/" target="_blank" class="ig"><img
