--- a/works.html
+++ b/works.html
@@ -78,13 +78,13 @@
       </div>
       <!-- works-card -->
       <div class="works-list wrap-row">
-        <a class="works-card" href="">
+        <a class="works-card">
           <div class="thumbnail">
             <img src="./assets/white_01.png" alt="" />
           </div>
           <div>
             <span class="align-left">作品名稱</span>
-            <span href="" class="tag caption btn-secondary">250ml</span>
+            <span class="tag caption btn-secondary">250ml</span>
           </div>
           <p class="price-text">NT$600</p>
         </a>
@@ -94,67 +94,67 @@
           </div>
           <div>
             <span class="align-left">作品名稱</span>
-            <span href="" class="tag caption btn-secondary">250ml</span>
+            <span class="tag caption btn-secondary">250ml</span>
           </div>
           <p class="price-text">NT$500</p>
         </a>
-        <a class="works-card" href="">
+        <a class="works-card">
           <div class="thumbnail">
             <img src="./assets/white_03.png" alt="" />
           </div>
           <div>
             <span class="align-left">作品名稱</span>
-            <span href="" class="tag caption btn-secondary">250ml</span>
+            <span class="tag caption btn-secondary">250ml</span>
           </div>
           <p class="price-text">NT$500</p>
         </a>
-        <a class="works-card" href="">
+        <a class="works-card">
           <div class="thumbnail">
             <img src="./assets/white_04.png" alt="" />
           </div>
           <div>
             <span class="align-left">作品名稱</span>
-            <span href="" class="tag caption btn-secondary">250ml</span>
+            <span class="tag caption btn-secondary">250ml</span>
           </div>
           <p class="price-text">NT$500</p>
         </a>
-        <a class="works-card" href="">
+        <a class="works-card">
           <div class="thumbnail">
             <img src="./assets/white_05.png" alt="" />
           </div>
           <div>
             <span class="align-left">作品名稱</span>
-            <span href="" class="tag caption btn-secondary">250ml</span>
+            <span class="tag caption btn-secondary">250ml</span>
           </div>
           <p class="price-text">NT$500</p>
         </a>
-        <a class="works-card" href="">
+        <a class="works-card">
           <div class="thumbnail">
             <img src="./assets/white_06.png" alt="" />
           </div>
           <div>
             <span class="align-left">作品名稱</span>
-            <span href="" class="tag caption btn-secondary">250ml</span>
+            <span class="tag caption btn-secondary">250ml</span>
           </div>
           <p class="price-text">NT$500</p>
         </a>
-        <a class="works-card" href="">
+        <a class="works-card">
           <div class="thumbnail">
             <img src="./assets/white_07.png" alt="" />
           </div>
           <div>
             <span class="align-left">作品名稱</span>
-            <span href="" class="tag caption btn-secondary">250ml</span>
+            <span class="tag caption btn-secondary">250ml</span>
           </div>
           <p class="price-text">NT$500</p>
         </a>
-        <a class="works-card" href="">
+        <a class="works-card">
           <div class="thumbnail">
             <img src="./assets/white_08.png" alt="" />
           </div>
           <div>
             <span class="align-left">作品名稱</span>
-            <span href="" class="tag caption btn-secondary">18cm</span>
+            <span class="tag caption btn-secondary">18cm</span>
           </div>
           <p class="price-text">NT$500</p>
         </a>
