--- a/work-temp.html
+++ b/work-temp.html
@@ -11,7 +11,7 @@
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;400&family=Roboto:wght@300&display=swap"
     rel="stylesheet">
   <title>生活陶｜又煦陶作</title>
-  <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
+  <link rel="stylesheet" href="./css/vendors/swiper-bundle.min.css">
   <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -63,20 +63,41 @@
     <div class="container">
       <section class="work-detail-wrap">
         <div class="work-img-wrap">
-          <div class="work-slider-viewport">
+          <!-- Swiper -->
+          <div class="swiper-container gallery-top">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide -thumbs" style="background-image:url(./assets/white_02_1.jpg)"></div>
+              <div class="swiper-slide -thumbs" style="background-image:url(./assets/white_02_2.jpg)"></div>
+              <div class="swiper-slide -thumbs" style="background-image:url(./assets/white_02_3.jpg)"></div>
+              <div class="swiper-slide -thumbs" style="background-image:url(./assets/white_02_4.jpg)"></div>
+            </div>
+          </div>
+          <div class="swiper-container gallery-thumbs">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide -thumbs thumbsNav" style="background-image:url(./assets/white_02_1.jpg)">
+              </div>
+              <div class="swiper-slide -thumbs thumbsNav" style="background-image:url(./assets/white_02_2.jpg)">
+              </div>
+              <div class="swiper-slide -thumbs thumbsNav" style="background-image:url(./assets/white_02_3.jpg)">
+              </div>
+              <div class="swiper-slide -thumbs thumbsNav" style="background-image:url(./assets/white_02_4.jpg)">
+              </div>
+            </div>
+          </div>
+          <!-- <div class="work-slider-viewport">
             <div class="work-slider-container">
-              <div class="work-slider-img" style="background-image: url(./assets/white_02_1.jpg);"></div>
-              <div class="work-slider-img" style="background-image: url(./assets/white_02_2.jpg);"></div>
-              <div class="work-slider-img" style="background-image: url(./assets/white_02_3.jpg);"></div>
-              <div class="work-slider-img" style="background-image: url(./assets/white_02_4.jpg);"></div>
+              <img data-id="work-img1" src="./assets/white_02_1.jpg" alt="">
+              <img data-id="work-img2" src="./assets/white_02_2.jpg" alt="">
+              <img data-id="work-img3" src="./assets/white_02_3.jpg" alt="">
+              <img data-id="work-img4" src="./assets/white_02_4.jpg" alt="">
             </div>
           </div>
           <div class="work-slider-page">
-            <div class="work-single-page" data-num="1" style="background-image: url(./assets/white_02_1.jpg)"></div>
-            <div class="work-single-page" data-num="2" style="background-image: url(./assets/white_02_2.jpg)"></div>
-            <div class="work-single-page" data-num="13" style="background-image: url(./assets/white_02_3.jpg)"></div>
-            <div class="work-single-page" data-num="13" style="background-image: url(./assets/white_02_4.jpg)"></div>
-          </div>
+            <a class="work-single-page" id="work-img1" style="background-image: url(./assets/white_02_1.jpg)"></a>
+            <a class="work-single-page" id="work-img2" style="background-image: url(./assets/white_02_2.jpg)"></a>
+            <a class="work-single-page" id="work-img3" style="background-image: url(./assets/white_02_3.jpg)"></a>
+            <a class="work-single-page" id="work-img4" style="background-image: url(./assets/white_02_4.jpg)"></a>
+          </div> -->
         </div>
         <div class="work-info-wrap">
           <a href="./works.html">沙點白釉系列</a>
@@ -170,8 +191,30 @@
     </div>
   </footer>
   <!--  ========== FOOTER ========== -->
+  <!-- vendorstart -->
+  <script src="./js/vendor/swiper-bundle.min.js"></script>
+  <!-- vendorend -->
   <script src="./js/cursor.js"></script>
   <script src="./js/value.js"></script>
+  <script>
+    var galleryThumbs = new Swiper('.gallery-thumbs', {
+      spaceBetween: 10,
+      slidesPerView: 4,
+      freeMode: true,
+      watchSlidesVisibility: true,
+      watchSlidesProgress: true,
+    });
+    var galleryTop = new Swiper('.gallery-top', {
+      spaceBetween: 10,
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+      thumbs: {
+        swiper: galleryThumbs
+      }
+    });
+  </script>
 </body>
 
 </html>
