update index rwd

--- a/index.html
+++ b/index.html
@@ -57,15 +57,14 @@
     </nav>
   </header>
   <!-- =========== NAVBR =========== -->
-
-  <!-- CONTAINER -->
+  <!-- =========== CONTAINER =========== -->
   <main>
     <div class="left-fixed">
       <p class="copyright roboto">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
     </div>
-    <!-- =========== hero section =========== -->
+    <!-- hero section -->
     <section class="hero-section">
-      <div class="slider-wrapper w-30">
+      <div class="sliderBlock">
         <!--slider -->
         <div class="swiper-container">
           <div class="swiper-wrapper">
@@ -91,13 +90,14 @@
           <div class="swiper-pagination roboto"></div>
         </div>
       </div>
-      <div class="w-70">
+      <div class="videoBlock">
         <video autoplay muted loop id="brand-video" class="brand-video">
           <source src="./assets/yoshi-2.mp4" type="video/mp4">
         </video>
         <img src="./assets/logo2.svg" alt="">
       </div>
     </section>
+    <!-- hero section -->
     <!-- about section -->
     <section class="about-section">
       <div class="about-l">
@@ -128,7 +128,7 @@
         <h2>WORKS</h2>
       </div>
       <!-- index-works-card -->
-      <div class="index-works-wrap sp--24">
+      <div class="index-works-wrap">
         <div class="index-works-card w-35 left">
           <img src="./assets/green_01_3.png" alt="">
           <p class="align-center">作品名稱</p>
@@ -150,8 +150,8 @@
         <h1>藝術陶</h1>
         <h2>ARTS</h2>
       </div>
-      <div class="art-l w-50"></div>
-      <div class="art-r w-40">
+      <div class="art-l"></div>
+      <div class="art-r">
         <h4>捏塑是非常療癒的事<br>
           透過觀察與創作<br>
           讓陶土以觀賞形式<br>
