--- a/classes.html
+++ b/classes.html
@@ -107,16 +107,16 @@
           </div>
           <div href="" class="classItem">
             <div class="classCard">
-              <p>學習從掌上型小陶偶，
-                到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
+              <p>給上過任何一期基礎陶藝課的學員。
+                可自由安排時段，可一週多堂，有利於作品進度穩定。適合有自己的創作想法，或是想精進技術的人。</p>
               <img src="./assets/class_04.png" alt="">
               <h5>進階創作</h5>
             </div>
           </div>
           <div href="" class="classItem">
             <div class="classCard">
-              <p>學習從掌上型小陶偶，
-                到中型陶偶挖空或土條製作技法，配合化妝土上色。</p>
+              <p>手捏器皿：可選一個陶碗、陶杯或盆栽。
+                拉胚+修胚體驗課：製作基本杯、碗。需安排不同天兩個時段。</p>
               <img src="./assets/class_05代換.png" alt="">
               <h5>體驗 / 團體課</h5>
             </div>
