--- a/arts.html
+++ b/arts.html
@@ -33,7 +33,7 @@
         <div class="navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="navlink" href="arts.html">藝術陶<div class="underline"></div></a>
+              <a class="navlink active" href="arts.html">藝術陶<div class="underline"></div></a>
             </li>
             <li class="nav-item">
               <a class="navlink" href="works.html">生活陶
