--- a/classes.html
+++ b/classes.html
@@ -40,7 +40,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="classes.html">課程教學<div class="underline"></div></a>
+              <a class="navlink active" href="classes.html">課程教學<div class="underline"></div></a>
             </li>
             <li class="nav-item">
               <a class="navlink" href="contact.html">聯絡我們<div class="underline"></div></a>
