--- a/works.html
+++ b/works.html
@@ -11,11 +11,13 @@
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&family=Noto+Serif+Display:ital,wght@1,300&family=Noto+Serif+JP:wght@300;400&family=Roboto:wght@300&display=swap"
     rel="stylesheet" />
   <title>生活陶｜又煦陶作</title>
-  <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
   <link rel="stylesheet" href="./css/main.css" />
 </head>
 
-<body onload="followMouse();" data-barba="wrapper">
+<body onload="followMouse();">
   <!-- =========== Cursor =========== -->
   <div class="cursor-wrap">
     <div class="cursor"></div>
@@ -36,7 +38,7 @@
               <a class="navlink" href="arts.html">藝術陶<div class="underline"></div></a>
             </li>
             <li class="nav-item">
-              <a class="navlink" href="works.html">生活陶
+              <a class="navlink active" href="works.html">生活陶
                 <div class="underline"></div>
               </a>
             </li>
@@ -48,17 +50,47 @@
             </li>
           </ul>
         </div>
-        <!-- menu-btn -->
-        <a href="./menu.html" class="navbar-toggler">
-          <div class="line-1"></div>
-          <div class="line-2"></div>
-        </a>
+        <div class="barres">
+          <div class="hamburger1"></div>
+          <div class="hamburger2"></div>
+        </div>
       </div>
     </nav>
   </header>
   <!-- =========== NAVBR =========== -->
+  <!--  ========== MENU ========== -->
+  <div class="menu">
+    <div class="menubg"></div>
+    <div class="menu-content">
+      <ul class="menu-link-wrap">
+        <li> <a href="./index.html" class="menulink">首頁</a></li>
+        <li> <a href="./arts.html" class="menulink">藝術陶</a></li>
+        <li> <a href="./works.html" class="menulink">生活陶</a></li>
+        <li> <a href="./classes.html" class="menulink">課程教學</a></li>
+        <li> <a href="./contact.html" class="menulink">聯絡我們</a></li>
+      </ul>
 
-  <!-- CONTAINER -->
+      <div class="menu-bottom-wrap">
+        <h6 class="menu-bottom-title">聯絡我們</h6>
+        <div class="menu-bottom-box1">
+          <p class="label">〒950 台東縣台東市杭州街118號1樓</p>
+          <p class="label">(+886) 921-271-867</p>
+        </div>
+        <div class="menu-bottom-box2">
+          <a href="https://www.instagram.com/yoshipottery/" target=_blank> <img src="./assets/instagram-02.svg"
+              alt=""></a>
+          <a href="https://www.facebook.com/yoshipottery" target=_blank> <img src="./assets/facebook-02.svg" alt=""></a>
+        </div>
+        <div class="menu-bottom-box3">
+          <a href="./contact.html" class="btn btn-secondary-outline">報名課程</a>
+          <a href="./contact.html" class="btn btn-secondary-outline">陶器訂製</a>
+        </div>
+        <p class="menu-copyright label">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
+      </div>
+    </div>
+  </div>
+  <!--  ========== MENU ========== -->
+  <!-- ========== CONTAINER ========== -->
   <main>
     <div class="left-fixed">
       <p class="copyright roboto">© YOSHIPOTTERY ALL RIGHTS RESERVED.</p>
@@ -175,8 +207,7 @@
       </div>
     </div>
   </main>
-  <!-- CONTAINER -->
-
+  <!-- ========== CONTAINER ========== -->
   <!--  ========== FOOTER ========== -->
   <footer class="footer">
     <div class="container-footer">
@@ -215,6 +246,35 @@
   </footer>
   <!--  ========== FOOTER ========== -->
   <script src="./js/cursor.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('.barres').click(function () {
+        $('.barres').toggleClass('active');
+      })
+    })
+
+    var timeline = new TimelineMax();
+
+    timeline.to(".menu", 1.5, {
+      left: '0%',
+      ease: Expo.easeInOut,
+      delay: -1.5
+    });
+    timeline.staggerFrom(".menu ul li", 0.4, {
+      x: -100,
+      opacity: 0
+    }, 0.1);
+
+    timeline.reverse();
+
+    $(document).on('click', '.barres', function () {
+      timeline.play();
+    });
+    $(document).on('click', 'a', function () {
+      timeline.reverse();
+      $('.barres').toggleClass('active');
+    })
+  </script>
 </body>
 
 </html>
